<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="46dp">
            <ImageView
                android:id="@+id/icon_fanhui"
                android:layout_width="30dp"
                android:layout_height="34dp"
                android:layout_marginTop="9dp"
                android:src="@drawable/fanhui" />
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:text="@string/Weather_title"
                android:textColor="@color/white"
                android:textSize="30dp" />
            <ImageView
                android:id="@+id/icon"
                android:layout_width="28dp"
                android:layout_height="29dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="11dp"
                android:src="@drawable/gengduo" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <android.support.v7.widget.CardView
            app:cardCornerRadius="15dp"
            android:backgroundTint="@color/hailu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                android:id="@+id/Wea_img"
                android:src="@drawable/qing"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_width="120dp"
                android:layout_height="120dp" />

            <TextView
                android:id="@+id/Wea_local"
                android:text="@string/Wea_local"
                android:textSize="40dp"
                android:textColor="@color/white"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/Wea_state"
                    android:text="@string/Wea_state"
                    android:textSize="14dp"
                    android:gravity="center"
                    android:layout_below="@+id/Wea_local"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="40dp"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/Wea_temperature"
                    android:text="@string/Wea_temperature"
                    android:textSize="14dp"
                    android:gravity="center"
                    android:layout_below="@+id/Wea_state"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="6dp"
                    android:layout_marginRight="40dp"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/Wea_suggest"
                    android:text="@string/Wea_suggest"
                    android:textSize="15dp"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:layout_below="@+id/Wea_img"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/Wea_turnover_time"
                    android:text="@string/Wea_turnover_time"
                    android:textSize="15dp"
                    android:layout_below="@+id/Wea_suggest"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginRight="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
             </RelativeLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="4dp">

        <ListView
            android:id="@+id/listview"
            android:scrollbars="none"
            android:divider="@null"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ListView>
    </LinearLayout>


</LinearLayout>
